--- a/simple.css
+++ b/simple.css
@@ -1,69 +1,134 @@
 /* CSS Reset */
 
 * {
-    margin: 0%;
-    padding: 0%;
+  margin: 0%;
+  padding: 0%;
 }
-
 
 /* Heading Designing Part */
 
 h2 {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    color: rgb(8, 147, 240);
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: rgb(8, 147, 240);
 }
 
 .center {
-    height: 100%;
-    width: 100%;
-    background-color: rgb(243, 235, 235);
+  height: 100%;
+  width: 100%;
+  background-color: rgb(218, 203, 203);
 }
 
 .navLinks li {
-    list-style: none;
-    display: inline-block;
-    padding: 13px;
+  list-style: none;
+  display: inline-block;
+  padding: 13px;
 }
 
 .navLinks li a {
-    text-decoration: none;
-    font-size: 25px;
+  text-decoration: none;
+  font-size: 25px;
 }
 
 .navLinks li a:hover {
-    color: rgba(255, 36, 36, 0.867);
+  color: rgb(8, 147, 240);
+  border-bottom: 2px solid rgb(8, 147, 240);
 }
-
 
 /* container Design Part */
 
 .container {
-    background-color: black;
-    color: white;
-    border-radius: 23px;
-    height: 100px;
-    width: 500px;
-    margin-top: 120px;
-    margin-left: 33%;
+  background-color: black;
+  color: white;
+  border-radius: 23px;
+  height: 100px;
+  width: 500px;
+  margin-top: 120px;
+  margin-left: 33%;
 }
 
 #btn {
-    display: flex;
-    display: inline-block;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    margin-left: 185px;
-    margin-top: 30px;
-    color: black;
-    background-color: rgb(255, 255, 255);
-    padding: 12px;
-    border-radius: 20px;
+  display: flex;
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-left: 185px;
+  margin-top: 30px;
+  color: black;
+  background-color: rgb(255, 255, 255);
+  padding: 12px;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
 #btn:hover {
-    background-color: black;
-    color: rgb(8, 147, 240);
+  background-color: black;
+  color: rgb(8, 147, 240);
+}
+@media (max-width: 1000px) {
+  .container {
+    margin-top: 120px;
+    margin-left: 29%;
+  }
+}
+@media (max-width: 900px) {
+  .container {
+    margin-left: 24%;
+  }
+}
+
+@media (max-width: 800px) {
+  .container {
+    margin-left: 20%;
+    width: 400px;
+  }
+  #btn {
+    margin-left: 170px;
+  }
+}
+@media (max-width: 700px) {
+  .container {
+    margin-left: 30%;
+    width: 320px;
+  }
+  #btn {
+    margin-left: 120px;
+  }
+}
+@media (max-width: 500px) {
+  .container {
+    margin-left: 10%;
+  }
+  #btn {
+    margin-left: 110px;
+  }
+}
+@media (max-width: 400px) {
+  .container {
+    margin-left: 2%;
+    width: 300px;
+  }
+  .container h2 {
+    font-size: 20px;
+  }
+  #btn {
+    margin-left: 100px;
+    padding: 9px;
+  }
+}
+
+@media (max-width: 320px) {
+  .container {
+    margin-left: 1%;
+    width: 220px;
+  }
+  .container h2 {
+    font-size: 20px;
+  }
+  #btn {
+    margin-left: 75px;
+    padding: 5px;
+  }
 }
