--- a/simple.css
+++ b/simple.css
@@ -11,29 +11,30 @@ h2 {
   display: flex;
   justify-content: center;
   text-align: center;
-  color: rgb(8, 147, 240);
+  color: white;
 }
 
 .center {
-  height: 100%;
+  height: 4rem;
   width: 100%;
-  background-color: rgb(218, 203, 203);
+  background-color: rgb(49, 54, 85);
 }
 
 .navLinks li {
   list-style: none;
   display: inline-block;
-  padding: 13px;
+  padding: 0.1rem;
 }
 
 .navLinks li a {
+  margin-left: 1rem;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 1.2rem;
+  color: white;
 }
 
 .navLinks li a:hover {
-  color: rgb(8, 147, 240);
-  border-bottom: 2px solid rgb(8, 147, 240);
+  border-bottom: 2px solid white;
 }
 
 /* container Design Part */
@@ -41,11 +42,12 @@ h2 {
 .container {
   background-color: black;
   color: white;
-  border-radius: 23px;
-  height: 100px;
-  width: 500px;
-  margin-top: 120px;
-  margin-left: 33%;
+  border-radius: 1.2rem;
+  height: 6rem;
+  width: 25rem;
+  margin: auto ;
+  margin-top: 12rem;
+  box-shadow: 15px 14px 19px 0px rgba(0,0,0,0.75);
 }
 
 #btn {
@@ -54,22 +56,23 @@ h2 {
   align-items: center;
   justify-content: center;
   position: relative;
-  margin-left: 185px;
-  margin-top: 30px;
+  margin-left: 10rem;
+  margin-top: 1.9rem;
   color: black;
   background-color: rgb(255, 255, 255);
-  padding: 12px;
-  border-radius: 20px;
+  padding: 0.4rem;
+  border-radius: 1.8rem;
   cursor: pointer;
+  border: none;
 }
 
 #btn:hover {
-  background-color: black;
-  color: rgb(8, 147, 240);
+  background-color: rgb(49, 54, 85);
+  color: white;
 }
 @media (max-width: 1000px) {
   .container {
-    margin-top: 120px;
+    margin-top: 11rem;
     margin-left: 29%;
   }
 }
@@ -82,53 +85,39 @@ h2 {
 @media (max-width: 800px) {
   .container {
     margin-left: 20%;
-    width: 400px;
+    width: 20rem;
   }
   #btn {
-    margin-left: 170px;
+    margin-left: 7rem;
   }
 }
 @media (max-width: 700px) {
   .container {
-    margin-left: 30%;
-    width: 320px;
+    margin-left: 15%;
+    width: 20rem;
   }
   #btn {
-    margin-left: 120px;
+    margin-left: 8rem;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .container {
     margin-left: 10%;
   }
   #btn {
-    margin-left: 110px;
+    margin-left: 8rem;
   }
 }
-@media (max-width: 400px) {
+@media (max-width: 520px) {
   .container {
     margin-left: 2%;
-    width: 300px;
+    width: 18rem;
   }
   .container h2 {
-    font-size: 20px;
+    font-size: 1.2rem;
   }
   #btn {
-    margin-left: 100px;
-    padding: 9px;
-  }
-}
-
-@media (max-width: 320px) {
-  .container {
-    margin-left: 1%;
-    width: 220px;
-  }
-  .container h2 {
-    font-size: 20px;
-  }
-  #btn {
-    margin-left: 75px;
-    padding: 5px;
+    margin-left: 7rem;
+    padding: 0.3rem;
   }
 }
